room no longer expands too much vertically

--- a/public/css/room.css
+++ b/public/css/room.css
@@ -5,6 +5,7 @@
 .lobby .rooms .entries .room{
 	position:relative;
 	width:100%;
+    height: 100%;
 	box-sizing:border-box;
 	min-height:100%;
 	padding-left:3px;
@@ -15,6 +16,7 @@
 .lobby .rooms .entries .room .top{
 	display:table-row;	
 	width:100%;
+	height:100%;
 	box-sizing:border-box;
 }
 .lobby .rooms .entries .room .top .feed{
